--- a/Day2/Day2/Day2.csproj
+++ b/Day2/Day2/Day2.csproj
@@ -18,4 +18,10 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="input1.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
