--- a/Day8/Day8.csproj
+++ b/Day8/Day8.csproj
@@ -27,6 +27,9 @@
       <None Update="example2.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="examplePt2.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
